# customAllocator

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp  makefile
buddy/: buddy.cpp  buddy.hpp
examples/: main.cpp
freelist/: freelist.cpp  freelist.hpp
includes/: buddy.hpp  freelist.hpp  memory_region.hpp  superblock.hpp
src/: buddy.cpp  freelist.cpp  superblock.cpp
